changes in index file

--- a/index1.html
+++ b/index1.html
@@ -1,3 +1,6 @@
  Hello, This is pramod working on Devops
  Mayuri is helping me in my studies .
-
+ Situation in maharastra is becoming worst espcially in vidarbha due to covid rise 
+ Mumbai pune metro city needs to take measure in order to rpevent from furtehr spread.
+ 
+=
